# llm_demos

./: Cargo.toml  README.md
a_pure_rust_bot/: notes.md
ai_buddy/: Cargo.toml  notes.md  test_file.md
ai_buddy/src/: cli_args.rs  main.rs
build_an_advanced_llm/: notes.md
build_an_api/: notes.md
build_fullstack_chatbot/: notes.md
build_serverless_ai_work/: notes.md
burn_a_dp_fmwr/: Cargo.toml  notebook_rust.ipynb  notes.md  shakespear_romeo.txt
burn_a_dp_fmwr/src/: bigram_model.rs  main.rs  utils.rs
create_linalg_from_scratch/: notes.md
creating_versatile/: notes.md
is_rust_king_data_sci/: Cargo.toml  notes.md
is_rust_king_data_sci/src/: main.rs
llm_chain/: Cargo.toml  note.md
llm_chain/src/: cli_args.rs  main.rs
nn_from_scratch/: notes.md
nn_rust_comp_graph/: notes.md
pytorch/: notes.md
rust_ai_func_call/: Cargo.toml  notes.md
rust_ai_func_call/src/: main.rs
rust_ai_simpleway/: Cargo.toml  notes.md
rust_ai_simpleway/src/: main.rs
rust_gen_ai/: Cargo.toml  notes.md
rust_gen_ai/src/: cli_args.rs  main.rs
rust_llm_frw_bfuture/: Cargo.toml  notes.md
rust_llm_frw_bfuture/papers/: paper1.md  paper2.md  paper3.md
rust_llm_frw_bfuture/src/: cli_args.rs  main.rs
rust_ollama_examples/: Cargo.toml  notes.md
rust_ollama_examples/src/: cli_args.rs  main.rs
this_os_proj_bfuture/: notes.md
