[package]
name = "burn_a_dp_fmwr"
version = "0.1.0"
edition = "2021"

[workspace]
members = []

[dependencies]
anyhow = "1.0.91"
burn = { version = "0.15.0", features = ["wgpu"] }
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1.0"
dialoguer = "0.11.0"
itertools = "0.13.0"
rand = "0.8.5"
tokio = { version = "1.41.0", features = ["full"] }
