[package]
name = "rust_ai_func_call"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
async-openai = "0.25.0"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
dialoguer = "0.11.0"
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
