[package]
name = "rust_llm_frw_bfuture"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
dialoguer = "0.11.0"
kalosm = "0.3.2"
kalosm-language = "0.3.3"
kalosm-llama = "0.3.4"
kalosm-sample = "0.3.2"
serde = { version = "1.0.214", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.41.0", features = ["full"] }
